--- a/index.htm
+++ b/index.htm
@@ -202,7 +202,7 @@ You can find more information on the ski resort and the village on <a href="http
           <td width="26%" valign="top">
 		  
 		  <p>
-			<a href="Fortuna_fichiers/Vue.jpg"><img src="Fortuna_fichiers/Vue.jpg" width="250" border="0"></a><br>
+			<a href="Fortuna_fichiers/Vue.jpg"><img src="Fortuna_fichiers/Vue.JPG" width="250" border="0"></a><br>
 			<br>
 		    <a href="Fortuna_fichiers/Salon.jpg"><img src="Fortuna_fichiers/Salon.jpg" width="250" height="167" border="0"></a><br>
 		    <br>
